Update: Day1 Labs

--- a/Labs/Day1_1_Pytorch_Basics.ipynb
+++ b/Labs/Day1_1_Pytorch_Basics.ipynb
@@ -385,6 +385,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "**Example:** Input $(32, 32)$, kernel=3, stride=1, padding=1 → Output $(32, 32)$\n",
+    "\n",
+    "📺 **[Convolution Visualizer](https://github.com/vdumoulin/conv_arithmetic)** | **[CNN Explainer](https://poloclub.github.io/cnn-explainer/)**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 🔹 3️⃣ Pooling (`nn.MaxPool2d` / `nn.AvgPool2d`)**\n",
     "\n",
     "###  📌 **Usage**\n",
@@ -967,7 +977,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 📚 Additional Resources\n",
+    "\n",
+    "**Visualizations:**\n",
+    "- 🎨 [CNN Explainer](https://poloclub.github.io/cnn-explainer/) - Interactive CNN layers\n",
+    "- 🎮 [TensorFlow Playground](https://playground.tensorflow.org/) - Neural network visualization\n",
+    "- 📊 [Conv Arithmetic](https://github.com/vdumoulin/conv_arithmetic) - Convolution animations\n",
+    "\n",
+    "\n",
+    "**📘 For detailed math & explanations:** See `Labs/Extras/Day1_Extras.ipynb`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Contributed by: Mohamed Eltayeb\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Edited by: Abdulellah Mojalled"
    ]
   },
   {
